<resources>
    <string name="app_name" translatable="false">Dogedex</string>

    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="group">Group</string>
    <string name="male">Male</string>
    <string name="image_this_kind_of_dog">Image this kind of dog</string>
    <string name="icon_of_a_heart">Icon of a heart</string>
    <string name="check_button">Check button</string>

    <string name="format_life_expectancy">%s years</string>
    <string name="format_height" translatable="false">%.1f cm</string>
    <string name="format_index" translatable="false">#%d</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Do not have an account</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>

    <string name="error_getting_dogs">Error while getting the dogs</string>
    <string name="error_email_is_not_valid">Email is not valid</string>
    <string name="error_password_is_not_valid">Password is not valid</string>
    <string name="error_passwords_do_not_match">Password do not match</string>
    <string name="there_was_an_error">There was an error</string>
    <string name="take_photo_button">Take photo button</string>
    <string name="show_dogs_list_button">Show dogs list button</string>
    <string name="open_settings_button">Go to app settings button</string>
    <string name="logout">Logout</string>
    <string name="do_you_wanna_logout">Do you want to logout?</string>

    <string name="error_signing_up">Error signing up</string>
    <string name="error_login_in">Error login in</string>
    <string name="error_user_already_exist">User already exist</string>
    <string name="error_user_not_found">User not found</string>
    <string name="error_unknown">There\'s an unknown error</string>
    <string name="error_no_internet_conecction">There\'s no internet connection</string>
    <string name="error_wrong_user_or_password">Wrong user or password</string>
    <string name="error_adding_dog">There was an error adding dog</string>

    <string name="should_accept_camera_permission">You need to accept the camera permissions to use camera</string>
    <string name="accept_camera_permission">Accept camera permission</string>
    <string name="camera_permissions_its_needed">The camera\'s permission it\'s needed to find and add new dogs to your %s.</string>
    <string name="error_taking_photo">Error taking photo</string>
    <string name="image_taken_by_the_camera">Image taken by the camera</string>
    <string name="error_invalid_bitmap">Invalid bitmap</string>
    <string name="error_dialog_title">Oops, something went wrong</string>
    <string name="back_button">Back button</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="dog_collection">Dog collection</string>
</resources>
