<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_background"
    tools:context=".ui.detail.DogDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="200dp"
        android:scrollbars="none">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageViewDetailDog"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="56dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_this_kind_of_dog"
                android:elevation="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="182dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_detail_info"
                android:elevation="4dp"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/textViewDetailIndex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="8dp"
                    android:textColor="@color/text_black"
                    android:textSize="24sp"
                    tools:text="#25" />

                <TextView
                    android:id="@+id/textViewDetailName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="8dp"
                    android:textColor="@color/text_black"
                    android:textSize="32sp"
                    tools:text="Tiny Poodle" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="200dp"
                        android:layout_height="6dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/bg_progressbar"
                        android:elevation="2dp"
                        android:indeterminate="false"
                        android:max="10"
                        android:progress="10"
                        android:progressTint="@color/color_primary" />

                    <ImageView
                        android:id="@+id/imageVieDetailHeartIcon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/red_circle"
                        android:contentDescription="@string/icon_of_a_heart"
                        android:elevation="2dp"
                        android:padding="4dp"
                        android:src="@drawable/ic_heart"
                        app:tint="@color/white" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/textViewDetailLifeExpectancy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/text_black"
                    android:textSize="16sp"
                    tools:text="10 - 14 años" />

                <TextView
                    android:id="@+id/textViewDetailTemperament"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:textColor="@color/text_black"
                    android:textSize="16sp"
                    tools:text="Gentle, smart, happy" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/female"
                            android:textColor="@color/text_black" />

                        <TextView
                            android:id="@+id/textViewDetailFemaleWeight"
                            style="@style/DetailSectionInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            tools:text="13 - 14.5 kg" />

                        <TextView
                            style="@style/DetailSectionName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight" />

                        <TextView
                            android:id="@+id/textViewDetailFemaleHeight"
                            style="@style/DetailSectionInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            tools:text="35 - 37 cm" />

                        <TextView
                            style="@style/DetailSectionName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/height" />

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@color/divider" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewDetailType"
                            style="@style/DetailSectionInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            tools:text="Hound" />

                        <TextView
                            style="@style/DetailSectionName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/group" />

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@color/divider" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/male"
                            android:textColor="@color/text_black" />

                        <TextView
                            android:id="@+id/textViewDetailMaleWeight"
                            style="@style/DetailSectionInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@{dog.weightMale}"
                            tools:text="13 - 14.5 kg" />

                        <TextView
                            style="@style/DetailSectionName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight" />

                        <TextView
                            android:id="@+id/textViewDetailMaleHeight"
                            style="@style/DetailSectionInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@{dog.heightMale}"
                            tools:text="37 - 40 cm" />

                        <TextView
                            style="@style/DetailSectionName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/height" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="24dp"
        android:contentDescription="@string/check_button"
        android:elevation="4dp"
        app:srcCompat="@drawable/ic_check"
        app:tint="@color/white" />

    <ProgressBar
        android:id="@+id/progressBarDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        tools:visibility="visible" />

</FrameLayout>

